# resilient-research-agent

./: .gitignore  README.md  modal_app.py  pyproject.toml
app/: __main__.py  a_researcher.py  app.py  b_research_session.py  c_deep_research.py  deep_research.py  pyproject.toml  resilient_agent.py  stateful_agent.py
app/utils/: restate_chat_model.py  schemas.py  tools.py
app_litellm/: a_researcher.py  b_research_session.py  c_deep_research.py  deep_research.py  pyproject.toml  resilient_agent.py  stateful_agent.py
app_litellm/utils/: schemas.py  tools.py
