[project]
name = "social-agent"
version = "0.1.0"
description = "Restate × LiteLLM research agent — progressive tiers for a talk"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50",
    "tavily-python",
    "langchain-tavily",
    "langchain-openai",
    "slack-sdk",
    "hypercorn",
    "numpydoc",
    "restate-sdk",
]

[tool.uv]
package = false

[tool.uv.sources]
restate-sdk = { path = "../../dev/sdk-python/dist/restate_sdk-0.18.0-cp314-cp314-macosx_11_0_arm64.whl" }
