[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Restate × LiteLLM research agent (hand-rolled tool-call loop)."
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "litellm>=1.50",
    "langchain",
    "langchain-openai",
    "tavily-python",
    "slack-sdk",
    "hypercorn",
    "numpydoc",
    "modal>=1.4.3",
    "restate-sdk",
]

[tool.uv]
package = false

[tool.uv.sources]
restate-sdk = { path = "../../dev/sdk-python/dist/restate_sdk-0.18.0-cp314-cp314-macosx_11_0_arm64.whl" }
