[project]
name = "app"
version = "0.1.0"
description = "Restate × LangChain research agent (durable agent loop)."
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-openai",
    "tavily-python",
    "slack-sdk",
    "hypercorn",
    "restate-sdk[serde]>=0.18.1",
]

[tool.uv]
package = false
